--- a/newhome.css
+++ b/newhome.css
@@ -2,9 +2,9 @@
   box-sizing: border-box;
 }
 html, body {
-  overflow-x: hidden;
   width: 100%;
   scroll-behavior: smooth;
+  overflow-y: visible;
 }
 
 #loader {
@@ -95,8 +95,9 @@ border: 1.5px solid #fff
 .scroll-down svg {
     width: 40px;
     height: 40px;
-    fill: #4D81B7; /* 你的主題色 */
+    fill: #fff; /* 你的主題色 */
 }
+#hero{ position:relative; min-height:320px; }
 
 @keyframes float {
     0%, 100% {
@@ -106,9 +107,7 @@ border: 1.5px solid #fff
     transform: translate(-50%, 10px);
     }
 }
-.bg-light {
-    background-color: transparent !important;
-}
+
 .container-fluid {
     --bs-gutter-x: 2rem !important;
 }
@@ -146,20 +145,20 @@ border: 1.5px solid #fff
 }
 .titlecenter h1 {
     font-size: 3rem;
-    color: #004b97;
+    color: #fff;
     font-weight: 700;
     margin-bottom: 2rem;
     font-family: 'TimeMachine';
 }
 .titlecenter h2 {
     font-size: 1.5rem;
-    color: #383838;
+    color: #fff;
     margin-bottom: 1rem;
     margin-top: 1rem;
 }
-.titlecenter button {
+.shopbtn {
     background-color: #FFC857;
-    color: white;
+    color: #004b97;
     border: none;
     padding: 0.7rem 1.5rem;
     font-size: 1rem;
@@ -169,19 +168,31 @@ border: 1.5px solid #fff
     transition: background-color 0.3s ease;
     margin-top: 2rem;
 }
-button:hover {
+.shopbtn:hover {
+    color: white;
     background-color: #004b97;
+    border: white 1px solid;
+}
+.lookbtn {
+    background-color: rgba(255, 255, 255, 0.1) ;
+    color: white;
+    border: none;
+    padding: 0.7rem 1.5rem;
+    font-size: 1rem;
+    border-radius:50px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+    margin-top: 2rem;
+    margin-left: 1rem;
+}
+.lookbtn:hover {
+    color: #004b97;
+    background-color: #FFC857;
 }
 .titlecenter img {
     width: 84vw;
     margin-bottom: 1rem;
-}
-.titlepage {
-    width: 100%;
-    height: 100vh;
-    background-color: #f0f6fd;
-    background-size: cover;
-    background-position: center;
 }
 .parner {
     background-color: #fff;
@@ -260,9 +271,9 @@ button:hover {
 }
 .nback {
     background-color: #FFC857;
-    padding: 10px 16px;
+    padding: 20px 16px;
     border-radius: 10px;
-    min-width: 360px;
+    width: 320px;
 }
 .service {
     background-color: #fff;
